# pysoda

./: .gitignore  LICENSE  README.md  manifest.in  pyproject.toml  sds_schema.py  setup.py  soda_schema.json  soda_schema.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
pysoda/: __init__.py  constants.py
pysoda/core/: __init__.py
pysoda/core/dataset_generation/: __init__.py  upload.py
pysoda/core/dataset_generation/manifestSession/: manifest_session.py
pysoda/core/dataset_importing/: __init__.py  import_dataset.py
pysoda/core/metadata/: __init__.py  __input__.py  code_description.py  constants.py  dataset_description.py  helpers.py  manifest.py  performances.py  readme_changes.py  resources.py  samples.py  sites.py  subjects.py  submission.py
pysoda/core/metadata/manifest/: __init__.py  manifest_writer.py
pysoda/core/metadata/manifest_package/: __init__.py  manifest_import.py  manifest_writer.py
pysoda/core/permissions/: __init__.py  permissions.py
pysoda/core/pysoda/: __init__.py  soda.py  soda_object.py
pysoda/core/upload_manifests/: __init__.py  upload_manifests.py
pysoda/schema/: dataset_description.json  manifest.json  resources.json  samples.json  subjects.json
pysoda/utils/: __init__.py  authentication.py  config.py  exceptions.py  metadata_utils.py  pennsieveAgentUtils.py  pennsieveUtils.py  profile.py  schema_validation.py  upload_utils.py
schema/: code_description.json  dataset_description.json  manifest.json  performances.json  resources.json  samples.json  sites.json  subjects.json  submission_schema.json
sds_create_package/: constants.py
sds_create_package/core/dataset_generation/: upload.py
sds_create_package/utils/: __init__.py  exceptions.py  pennsieveAgentUtils.py  upload_utils.py
