[tool.poetry]
name = "pysoda-fairdataihub-tools"
version = "0.1.42"
description = "Pysoda package for Fairdataihub tools"
authors = ["Your Name <cmarroquin@calmi2.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fairdataihub/pysoda"
repository = "https://github.com/fairdataihub/pysoda"
packages = [
    { include = "pysoda" }
]
include = [
    "pysoda/core/metadata_templates/*",
    "pysoda/core/metadata_templates/*.xlsx",
    "pysoda/schema/*.json"
]

[tool.poetry.dependencies]
python = ">=3.6"
openpyxl = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"