[tool.poetry]
name = "pysodafair"
version = "0.1.62"
description = "Pysoda package for Fairdataihub tools"
authors = ["Christopher Marroquin <cmarroquin@calmi2.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fairdataihub/pysodafair"
repository = "https://github.com/fairdataihub/pysodafair"
packages = [
    { include = "pysoda" }
]
include = [
    "pysoda/core/metadata_templates/*",
    "pysoda/core/metadata_templates/*.xlsx",
    "pysoda/schema/*.json"
]

[tool.poetry.dependencies]
python = ">=3.6"
openpyxl = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"